--- a/static/site.css
+++ b/static/site.css
@@ -33,7 +33,7 @@
 
 .heartredbutton
 {
-    background-image:  url('/static/heart-red.png');
+    background-image:  url('/static//pic/heart-red.png');
     background-color: transparent;
     cursor: pointer;
     border: none;
@@ -45,7 +45,7 @@
 
 .heartdarkbutton
 {
-    background-image:  url('/static/heart-dark.png');
+    background-image:  url('/static/pic/heart-dark.png');
     background-color: transparent;
     cursor: pointer;
     border: none;
